--- a/assets/css/modal.css
+++ b/assets/css/modal.css
@@ -2,7 +2,7 @@
     cursor: pointer;
     transition: 0.3s;
     width: 100%;
-    max-height: 60%;
+    max-height: 350px;
 }
 
 #myImg:hover {opacity: 0.7;}
