--- a/assets/css/modal.css
+++ b/assets/css/modal.css
@@ -2,7 +2,7 @@
     cursor: pointer;
     transition: 0.3s;
     width: 100%;
-    max-height: 350px;
+    height: 100%;
 }
 
 #myImg:hover {opacity: 0.7;}
