--- a/assets/css/canvas.css
+++ b/assets/css/canvas.css
@@ -3,3 +3,22 @@
   height: auto;
   display: none;
 }
+
+
+.ir-arriba {
+	padding:20px;
+	display:inline-block;
+	background:rgba(239, 131, 118, 0.8);
+	color:#ffff;
+	position: fixed;
+	font-size:20px;
+	bottom:20px;
+	right:20px;
+	display:none;
+  cursor:pointer;
+  z-index: 1;
+}
+
+.ir-arriba:hover{
+  background:rgba(239, 131, 118, 1);
+}
