--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2499,7 +2499,7 @@ input, select, textarea {
 	.carousel {
 		position: relative;
 		overflow: hidden;
-		padding: 2em 0 2em 0;
+		padding: 0 0 0 0;
 		margin-bottom: 0;
 	}
 
@@ -2573,6 +2573,7 @@ input, select, textarea {
 			}
 
 		.carousel .reel {
+			height: 34em;
 			white-space: nowrap;
 			position: relative;
 			-webkit-overflow-scrolling: touch;
@@ -2582,10 +2583,11 @@ input, select, textarea {
 		.carousel article {
 			display: inline-block;
 			width: 18em;
+			height: 95%;
 			background: #fff;
 			text-align: center;
 			padding: 0 1em 3em 1em;
-			margin: 0 2em 0 0;
+			margin: 0 0 0 0;
 			white-space: normal;
 			opacity: 1.0;
 			-moz-transition: opacity 0.75s ease-in-out;
@@ -2599,6 +2601,7 @@ input, select, textarea {
 			}
 
 			.carousel article .image {
+				height: 60%;
 				position: relative;
 				left: -1em;
 				top: 0;
@@ -2606,8 +2609,13 @@ input, select, textarea {
 				margin-right: -2em;
 				margin-bottom: 3em;
 			}
-
+			.carousel article header {
+				height: 10%;
+				position: relative;
+			}
 			.carousel article p {
+				
+				height: 20%;
 				text-align: center;
 			}
 
@@ -2630,11 +2638,23 @@ input, select, textarea {
 
 				.carousel .reel {
 					padding: 0 1.5em 0 1.5em;
+					height: 36em;
 				}
 
 				.carousel article {
 					width: 18em;
+					height: 95%;
 					margin: 0 1.25em 0 0;
+				}
+				.carousel article .image {
+					position: relative;
+					height: 60%;
+				}
+				.carousel article header {
+					height: 10%;
+				}
+				.carousel article p {
+					height: 20%;
 				}
 
 	}
@@ -2721,6 +2741,9 @@ input, select, textarea {
 				.carousel article {
 					width: 18em;
 					margin: 0 1em 0 0;
+				}
+				.carousel article .image {
+					height: 20em;
 				}
 
 	}
@@ -3105,16 +3128,19 @@ input, select, textarea {
 
 				.carousel .reel {
 					padding: 0 0.5em 0 0.5em;
+					height: 32em;
 				}
 
 				.carousel article {
 					width: 14em;
+					height: 90%;
 					padding-bottom: 2em;
 					margin: 0 0.5em 0 0;
 				}
 
 					.carousel article .image {
 						margin-bottom: 2em;
+						height: 18em;
 					}
 
 	}
