--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -158,7 +158,7 @@ input, select, textarea {
 	}
 
 		a:hover {
-			color: #ef8376;
+			color: #F7B158;
 			border-bottom-color: transparent;
 		}
 
@@ -2055,7 +2055,7 @@ input, select, textarea {
 	.button {
 		position: relative;
 		display: inline-block;
-		background: #df7366;
+		background: #D09345;
 		color: #fff;
 		text-align: center;
 		border-radius: 0.5em;
@@ -2077,7 +2077,7 @@ input, select, textarea {
 		button:hover,
 		.button:hover {
 			color: #fff;
-			background: #ef8376;
+			background: #F7B158;
 		}
 
 		input[type="button"].alt,
@@ -2085,7 +2085,7 @@ input, select, textarea {
 		input[type="reset"].alt,
 		button.alt,
 		.button.alt {
-			background: #2B252C;
+			background: #142337;
 		}
 
 			input[type="button"].alt:hover,
@@ -2131,7 +2131,7 @@ input, select, textarea {
 		.icon.circled {
 			position: relative;
 			display: inline-block;
-			background: #2b252c;
+			background: #142337;
 			color: #fff;
 			border-radius: 100%;
 			width: 3em;
@@ -2243,7 +2243,7 @@ input, select, textarea {
 
 		body.homepage #header:after {
 			content: '';
-			background: #1C0920;
+			background: #0a121c; /*Color de fondo inicial*/
 			display: block;
 			position: absolute;
 			left: 0;
@@ -2339,9 +2339,8 @@ input, select, textarea {
 				}
 
 				#nav > ul > li > a:hover {
-					text-decoration: underline;
-					text-decoration-color: gray;
-
+					text-decoration: none;
+					color: #F7B158;
 				}
 
 	.dropotron {
@@ -2452,13 +2451,13 @@ input, select, textarea {
 		position: relative;
 		overflow: hidden;
 		padding: 6em 0 6em 0;
-		background: #2b252c;
+		background: #142337;
 		color: #fff;
 	}
 
 		#footer .icon.circled {
 			background: #fff;
-			color: #2b252c;
+			color: #142337;
 		}
 
 		#footer header {
@@ -2541,7 +2540,7 @@ input, select, textarea {
 			}
 
 			.carousel .forward:hover:before, .carousel .backward:hover:before {
-				background-color: rgba(239, 131, 118, 0.75);
+				background-color: rgba(208, 147, 69, 0.75);
 			}
 
 		.carousel .forward {
