--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -633,7 +633,7 @@
 		}
 
 		&.alt {
-			background: #2B252C;
+			background: #142337;
 
 			&:hover {
 				background: #3B353C;
@@ -677,7 +677,7 @@
 		&.circled {
 			position: relative;
 			display: inline-block;
-			background: #2b252c;
+			background: #142337;
 			color: #fff;
 			border-radius: 100%;
 			width: 3em;
@@ -995,12 +995,12 @@
 		position: relative;
 		overflow: hidden;
 		padding: 6em 0 6em 0;
-		background: #2b252c;
+		background: #142337;
 		color: #fff;
 
 		.icon.circled {
 			background: #fff;
-			color: #2b252c;
+			color: #142337;
 		}
 
 		header {
